add task completion count in SBP nodeStats API
Signed-off-by: Kaushal Kumar <kshkmr@amazon.com>
Signed-off-by: Kaushal Kumar <ravi.kaushal97@gmail.com>